<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_water_cold" />

        <TextView
            android:id="@+id/textViewCounterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextTheme"
            android:textSize="16sp"
            android:lineSpacingExtra="12sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Квитанции" />

        <TextView
            android:id="@+id/textViewCounterNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_serial_number"
            android:drawablePadding="4dp"
            style="@style/MyTextTheme"
            android:textSize="14sp"
            android:textColor="@color/colorGreyishBrownThree"
            android:lineSpacingExtra="6sp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewIcon"
            app:layout_constraintTop_toBottomOf="@+id/textViewCounterName"
            tools:text="544442115" />



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewIcon">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMorningReadings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/morning_readings_hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMorningReadings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <!--<com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNightReadings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/night_readings_hint_text"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPeakReadings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/peak_readings_hint_text"/>-->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNightReadings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/night_readings_hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNightReadings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPeakReadings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/peak_readings_hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPeakReadings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!--<EditText
                android:id="@+id/editTextMorningReadings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/morning_readings_hint_text" />-->

            <!--<EditText
                android:id="@+id/editTextNightReadings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/night_readings_hint_text" />

            <EditText
                android:id="@+id/editTextPeakReadings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/peak_readings_hint_text" />-->

            <ImageView
                android:id="@+id/imageViewSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"
                android:background="@color/colorTealishTwo"
                android:paddingStart="10dp"
                android:paddingTop="8.7dp"
                android:paddingEnd="6.3dp"
                android:paddingBottom="7.7dp"
                app:srcCompat="@drawable/ic_send" />

        </LinearLayout>


        <TextView
            android:id="@+id/textViewAlarmHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:lineSpacingExtra="0sp"
            android:layout_marginTop="11dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            tools:text="Необходимо подать показания до 25.03.18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <ImageView
            android:id="@+id/imageViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingBottom="20dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/imageViewMore"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_info" />


        <ImageView
            android:id="@+id/imageViewMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingBottom="18dp"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_more" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>